--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clsx": "^2.1.1",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
