--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-intersection-observer": "^9.10.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
