--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-intersection-observer": "^9.10.2",
+    "react-loader-spinner": "^6.1.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
