--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-  "name": "bootcamp-70-react",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "axios": "^1.6.8",
-    "clsx": "^2.1.1",
-    "formik": "^2.4.6",
-    "modern-normalize": "^2.0.0",
-    "nanoid": "^5.0.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.3",
-    "react-icons": "^5.1.0",
-    "react-intersection-observer": "^9.10.2",
-    "react-loader-spinner": "^6.1.6",
-    "yup": "^1.4.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "daisyui": "^4.10.5",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.38",
-    "prop-types": "^15.8.1",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
-  }
+	"name": "bootcamp-70-react",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"server": "json-server --watch -p 7777 db.json",
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.3.4",
+		"axios": "^1.6.8",
+		"clsx": "^2.1.1",
+		"formik": "^2.4.6",
+		"json-server": "^1.0.0-alpha.23",
+		"modern-normalize": "^2.0.0",
+		"nanoid": "^5.0.7",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.51.3",
+		"react-icons": "^5.1.0",
+		"react-intersection-observer": "^9.10.2",
+		"react-loader-spinner": "^6.1.6",
+		"yup": "^1.4.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.2.66",
+		"@types/react-dom": "^18.2.22",
+		"@vitejs/plugin-react": "^4.2.1",
+		"autoprefixer": "^10.4.19",
+		"daisyui": "^4.10.5",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react": "^7.34.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.6",
+		"postcss": "^8.4.38",
+		"prop-types": "^15.8.1",
+		"tailwindcss": "^3.4.3",
+		"vite": "^5.2.0"
+	}
 }
