--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"formik": "^2.4.6",
 		"json-server": "^1.0.0-alpha.23",
 		"modern-normalize": "^2.0.0",
+		"moment": "^2.30.1",
 		"nanoid": "^5.0.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
