--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"react-icons": "^5.1.0",
 		"react-intersection-observer": "^9.10.2",
 		"react-loader-spinner": "^6.1.6",
+		"react-toastify": "^10.0.5",
 		"yup": "^1.4.0"
 	},
 	"devDependencies": {
