--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-icons": "^5.1.0",
 		"react-intersection-observer": "^9.10.2",
 		"react-loader-spinner": "^6.1.6",
+		"react-router-dom": "^6.23.0",
 		"react-toastify": "^10.0.5",
 		"yup": "^1.4.0"
 	},
