--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.3.4",
+		"@redux-devtools/extension": "^3.3.0",
 		"axios": "^1.6.8",
 		"clsx": "^2.1.1",
 		"formik": "^2.4.6",
@@ -25,8 +26,10 @@
 		"react-icons": "^5.1.0",
 		"react-intersection-observer": "^9.10.2",
 		"react-loader-spinner": "^6.1.6",
+		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.23.0",
 		"react-toastify": "^10.0.5",
+		"redux": "^5.0.1",
 		"yup": "^1.4.0"
 	},
 	"devDependencies": {
