--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.3.4",
 		"@redux-devtools/extension": "^3.3.0",
+		"@reduxjs/toolkit": "^2.2.4",
 		"axios": "^1.6.8",
 		"clsx": "^2.1.1",
 		"formik": "^2.4.6",
 		"json-server": "^1.0.0-alpha.23",
 		"modern-normalize": "^2.0.0",
 		"moment": "^2.30.1",
-		"nanoid": "^5.0.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.3",
