--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-router-dom": "^6.23.0",
 		"react-toastify": "^10.0.5",
 		"redux": "^5.0.1",
+		"redux-persist": "^6.0.0",
 		"yup": "^1.4.0"
 	},
 	"devDependencies": {
