--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"modern-normalize": "^2.0.0",
 		"moment": "^2.30.1",
 		"react": "^18.2.0",
+		"react-datepicker": "^6.9.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.3",
 		"react-icons": "^5.1.0",
