--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"clsx": "^2.1.1",
 		"formik": "^2.4.6",
 		"json-server": "^1.0.0-alpha.23",
+		"lucide-react": "^0.378.0",
 		"modern-normalize": "^2.0.0",
 		"moment": "^2.30.1",
 		"react": "^18.2.0",
